--- a/ProjectSquad/Base.lproj/Main.storyboard
+++ b/ProjectSquad/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="O1M-R7-pGv">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -22,10 +22,10 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
-        <!--Test-->
+        <!--Create Squad View Controller-->
         <scene sceneID="FDE-re-K3c">
             <objects>
-                <viewController id="qmp-Or-pwB" customClass="Test" customModule="ProjectSquad" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="qmp-Or-pwB" customClass="CreateSquadViewController" customModule="ProjectSquad" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Dh2-ir-kSg"/>
                         <viewControllerLayoutGuide type="bottom" id="KHR-Go-lE3"/>
@@ -141,7 +141,7 @@
                                     <rect key="frame" x="116" y="533" width="169" height="30"/>
                                 </variation>
                                 <connections>
-                                    <action selector="test" destination="qmp-Or-pwB" eventType="touchUpInside" id="D0T-FT-8vL"/>
+                                    <action selector="createSquad" destination="qmp-Or-pwB" eventType="touchUpInside" id="jL1-1q-amd"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -173,10 +173,54 @@
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outlet property="endTimeDatePicker" destination="DsP-v2-PXM" id="x7o-Wa-VcJ"/>
+                        <outlet property="squadNameTextField" destination="WpC-DV-El5" id="rjB-6u-cmL"/>
+                        <outlet property="startTimeDatePicker" destination="R9z-Uo-qvf" id="XC3-N5-LD1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KUH-4h-1sn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1011" y="201"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="zAR-GO-xUL">
+            <objects>
+                <viewController id="O1M-R7-pGv" customClass="ViewController" customModule="ProjectSquad" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="EYS-K9-MRM"/>
+                        <viewControllerLayoutGuide type="bottom" id="Izd-Ej-rc2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="YvC-Cv-b4D">
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mZq-6e-vWN">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="177" y="453" width="46" height="30"/>
+                                </variation>
+                                <connections>
+                                    <action selector="test" destination="O1M-R7-pGv" eventType="touchUpInside" id="mjA-m3-cQx"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="mZq-6e-vWN"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="mZq-6e-vWN"/>
+                            </mask>
+                        </variation>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oEO-P6-Xuq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4.5" y="53"/>
         </scene>
         <!--Map-->
         <scene sceneID="zdT-a2-Vyp">
@@ -237,7 +281,7 @@
         <!--View Controller-->
         <scene sceneID="Now-It-gtr">
             <objects>
-                <viewController id="wT0-7Q-2da" sceneMemberID="viewController">
+                <viewController id="wT0-7Q-2da" customClass="ViewController" customModule="ProjectSquad" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="BmZ-8f-SuN"/>
                         <viewControllerLayoutGuide type="bottom" id="tV4-3y-3DU"/>
